--- a/aoc2021/Cargo.toml
+++ b/aoc2021/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 ndarray = "0.15.6"
+good_lp = {version = "1.3.2",  default-features = false, features = ["minilp"]}
+itertools = "0.10.5"
