--- a/aoc2021/Cargo.toml
+++ b/aoc2021/Cargo.toml
@@ -5,7 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+run_solver = []
+print_long_ans = []
+
 [dependencies]
 ndarray = "0.15.6"
 good_lp = {version = "1.3.2",  default-features = false, features = ["minilp"]}
 itertools = "0.10.5"
+nom = "7.1.1"
+petgraph = "0.6.2"
