--- a/aoc2021/Cargo.toml
+++ b/aoc2021/Cargo.toml
@@ -15,3 +15,4 @@ good_lp = {version = "1.3.2",  default-features = false, features = ["minilp"]}
 itertools = "0.10.5"
 nom = "7.1.1"
 petgraph = "0.6.2"
+rayon = "1.6.0"
