--- a/aoc2022/Cargo.toml
+++ b/aoc2022/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+run_solver = []
+print_long_ans = []
+
 [dependencies]
 ndarray = "0.15.6"
 itertools = "0.10.5"
