--- a/aoc2022/Cargo.toml
+++ b/aoc2022/Cargo.toml
@@ -13,3 +13,6 @@ print_long_ans = []
 ndarray = "0.15.6"
 itertools = "0.10.5"
 nom = "7.1.1"
+petgraph = "0.6.2"
+serde = { version = "1.0.151", features = ["derive"] }
+serde_json = "1.0.89"
